--- a/src/styles/base/_components.scss
+++ b/src/styles/base/_components.scss
@@ -10,7 +10,7 @@
   // Blockquote
   blockquote {
     font-size: 0.97em;
-    margin: 1.4rem 0;
+    margin: 1.5rem 0;
     border-left: solid 3px var(--nb-border);
     padding: 2px 0 2px 0.7em;
     color: var(--nb-muted-foreground);
