--- a/src/styles/base/_custom-containers.scss
+++ b/src/styles/base/_custom-containers.scss
@@ -6,7 +6,7 @@
   // :::
   details {
     font-size: 0.95em;
-    margin: 1rem 0;
+    margin: 1.5rem 0;
     line-height: 1.7;
   }
 
@@ -50,7 +50,7 @@
     display: flex;
     align-items: flex-start;
     gap: 1rem;
-    margin: 1rem 0;
+    margin: 1.5rem 0;
 
     .bubble-avatar {
       display: flex;
